# seven_product_crawler

./: README.md  pyproject.toml
data/processed/: products.csv
data/raw/: products.csv
notebook/: analysis.py  process_data.py
src/: consts.py
src/scrapy_scripts/: scrapy.cfg
src/scrapy_scripts/seven_product_extractor/: items.py  middlewares.py  pipelines.py  settings.py
src/scrapy_scripts/seven_product_extractor/spiders/: product_spider.py
