[project]
name = "menu-opt-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scrapy>=2.11.2",
    "pulp>=2.9.0",
    "pandas>=2.2.3",
    "ipykernel>=6.29.5",
    "polars>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
